# Vibrating_Robot_Cam

./: .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
